Fix spacing in pre-game

--- a/src/scss/gameplay.scss
+++ b/src/scss/gameplay.scss
@@ -19,7 +19,9 @@
 }
 
 .pre-game-board-container {
+  max-width: max(350px, 50vw);
   padding: 1.25rem;
+  margin: 1.5rem;
   background: var(--clr-primary-800);
   border-radius: var(--border-radius-100);
 }
